[gd_scene load_steps=20 format=2]

[ext_resource path="res://MorseParser.gd" type="Script" id=1]
[ext_resource path="res://Testbench.gd" type="Script" id=2]
[ext_resource path="res://Assets/Main/Player.png" type="Texture" id=3]
[ext_resource path="res://Assets/Main/PlayerArm.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MorseChart.tscn" type="PackedScene" id=5]
[ext_resource path="res://Theme.tres" type="Theme" id=6]
[ext_resource path="res://MessageReceiver.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Messages/Messages.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Main/SoldierArea.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Main/Underground.png" type="Texture" id=10]
[ext_resource path="res://Assets/Desk/wood-rotten.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Main/Buble.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Main/PrintInfo.png" type="Texture" id=13]
[ext_resource path="res://Assets/Bunker/Fascist.png" type="Texture" id=14]

[sub_resource type="AtlasTexture" id=1]
flags = 23
atlas = ExtResource( 14 )
region = Rect2( 290, 0, 145, 260 )

[sub_resource type="AtlasTexture" id=2]
flags = 23
atlas = ExtResource( 14 )
region = Rect2( 290, 260, 145, 260 )

[sub_resource type="AtlasTexture" id=3]
flags = 23
atlas = ExtResource( 14 )
region = Rect2( 290, 520, 145, 260 )

[sub_resource type="AtlasTexture" id=4]
flags = 23
atlas = ExtResource( 14 )
region = Rect2( 290, 780, 145, 260 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Testbench" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MorseParser" type="Node" parent="."]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 394.0
margin_bottom = 720.0

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 1342.0
margin_top = 391.0
margin_right = 1679.0
margin_bottom = 451.0

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 330.0
margin_bottom = 53.0
theme = ExtResource( 6 )
bbcode_enabled = true

[node name="ReceivedMessages" type="PanelContainer" parent="."]
margin_left = 1341.0
margin_top = 40.0
margin_right = 2139.0
margin_bottom = 338.0

[node name="RichTextLabel" type="RichTextLabel" parent="ReceivedMessages"]
margin_left = 7.0
margin_top = 7.0
margin_right = 791.0
margin_bottom = 291.0
theme = ExtResource( 6 )
bbcode_enabled = true
scroll_active = false
scroll_following = true
script = ExtResource( 7 )

[node name="Room" type="Control" parent="."]
margin_right = 380.0
margin_bottom = 720.0

[node name="Background" type="Control" parent="Room"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SoldierArea" parent="Room/Background" groups=["troops"] instance=ExtResource( 9 )]

[node name="Underground" type="Sprite" parent="Room/Background"]
modulate = Color( 0.243137, 0.243137, 0.243137, 1 )
position = Vector2( 266.333, 558.25 )
scale = Vector2( 0.450695, 0.450694 )
texture = ExtResource( 10 )

[node name="Border" type="ColorRect" parent="Room/Background"]
anchor_right = 1.0
margin_top = 396.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 1 )

[node name="Player" type="Sprite" parent="Room"]
unique_name_in_owner = true
position = Vector2( 300, 628 )
texture = ExtResource( 3 )

[node name="PlayerArm" type="Sprite" parent="Room"]
unique_name_in_owner = true
position = Vector2( 239, 611 )
texture = ExtResource( 4 )
centered = false

[node name="SoldierLast" type="AnimatedSprite" parent="Room"]
unique_name_in_owner = true
visible = false
position = Vector2( 154.625, 585.845 )
scale = Vector2( 0.587931, 0.587931 )
frames = SubResource( 5 )
playing = true
flip_h = true

[node name="Table" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -900.0
margin_top = -360.0
margin_bottom = 360.0
rect_min_size = Vector2( 900, 720 )

[node name="Wood" type="TextureRect" parent="Table"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true

[node name="MorseChart" parent="Table" instance=ExtResource( 5 )]
margin_left = 187.0
margin_top = 647.0
margin_right = 446.0
margin_bottom = 978.0
rect_rotation = -2.0

[node name="GameHolder" type="Control" parent="Table"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Messages" parent="Table/GameHolder" instance=ExtResource( 8 )]

[node name="Border" type="ColorRect" parent="Table"]
anchor_bottom = 1.0
margin_right = 12.0
color = Color( 0, 0, 0, 1 )

[node name="PrintInfo" type="Sprite" parent="Table"]
position = Vector2( -190, 393 )
scale = Vector2( 0.381, 0.127266 )
texture = ExtResource( 13 )

[node name="PlayerType" type="RichTextLabel" parent="Table"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -370.0
margin_top = 375.0
margin_right = -908.0
margin_bottom = -310.0
theme = ExtResource( 6 )
bbcode_enabled = true
scroll_active = false
scroll_following = true

[node name="Buble" parent="." instance=ExtResource( 12 )]
margin_left = 262.0
margin_top = 442.0
margin_right = 322.0
margin_bottom = 488.0

[connection signal="current_val" from="MorseParser" to="Table/MorseChart" method="show_part"]
[connection signal="current_val_string" from="MorseParser" to="Buble" method="_on_MorseParser_current_val_string"]
[connection signal="hold" from="MorseParser" to="Room/Background/SoldierArea" method="_on_MorseParser_hold"]
[connection signal="new_part" from="MorseParser" to="." method="_on_Node_new_part"]
[connection signal="press" from="MorseParser" to="." method="_on_Node_press"]
[connection signal="press" from="MorseParser" to="Room/Background/SoldierArea" method="_on_MorseParser_press"]
[connection signal="release" from="MorseParser" to="." method="_on_Node_release"]
[connection signal="send_letter" from="MorseParser" to="." method="_on_Node_send_letter"]
[connection signal="send_letter" from="MorseParser" to="Table/MorseChart" method="hide_all"]
[connection signal="send_letter" from="MorseParser" to="Buble" method="_on_MorseParser_send_letter"]
[connection signal="caught" from="Room/Background/SoldierArea" to="." method="_on_SoldierArea_caught"]
